# llm-chatbot

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
chat/: app.py  bootstrap.py  config.py  embed.py  logs.py  rag.py
prompts/: base_prompt.txt  custom_prompt.txt
public/: stylesheet.css
